--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
+name = "gene-seq-intersections"
+description = "Count intersections between genes and sequences"
+version = "0.2.0"
+license = "MIT"
+license-file = "LICENSE"
+
+[[bin]]
 name = "intersections"
-version = "0.1.0"
+path = "src/main.rs"
 
 [dependencies]
 clap = {version = "2", features = ["yaml"]}
@@ -12,3 +19,5 @@ log = "0.3"
 serde = "1"
 serde_derive = "1"
 twox-hash = "1"
+typed-arena = "1"
+fnv = "1"
